v3.9.0 (XXXX-XX-XX)
-------------------

* APM-209: Histogram displaying is now switched off by default. For displaying
  it, the new flag `histogram.generate` must be set to true. Its default value
  is false for compatibility with other versions and also for complying with the
  histogram not being displayed by default. If this flag is not set to true, but
  other histogram flags are addressed, e.g. `--histogram.interval-size 500`,
  everything will still run normally, but a warning message will be displayed
  saying that the histogram is switched off and setting this flag would not be
  of use. When the flag is set to true, the histogram is displayed before the
  summary in the output.

* In the shards overview the list of servers to move the leader shard to, now
  also contains the current followers. This means that from now on also active
  follower servers can be nominated as the leading server for that specific
  shard.

* Extend Windows minidumps with memory regions referenced from CPU registers or
  the stack to provide more contextual information in case of crashes.

* Fix issues during rolling upgrades from 3.8.0 to 3.8.x (x >= 1) and from 3.7.x
  (x <= 12) to 3.8.3. The problem was that older versions did not handle
  following term ids that are sent from newer versions during synchronous
  replication operations.

* Increase default stack size on Windows from 1MB to 4MB. This should allow
  execution of larger queries without overflowing the stack.
  
* Make background calculation of SHA hashes for RocksDB .sst files less
  intrusive. The previous implementation frequently iterated over all files in
  the database directory to check if it needed to ad-hoc calculate the SHA
  hashes for .sst files it previously missed. The procedure it used was to
  iterate over all files in the database directory and check if there were
  matching pairs of .sst files and .sha files. This was expensive, because a